--- a/GongFaEditor/GongFaEditor.csproj
+++ b/GongFaEditor/GongFaEditor.csproj
@@ -52,7 +52,6 @@
     <Compile Include="Component\GTextBox.Designer.cs">
       <DependentUpon>GTextBox.cs</DependentUpon>
     </Compile>
-    <Compile Include="Component\ITaiWuService.cs" />
     <Compile Include="GongFaEdit.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -61,6 +60,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Utils\ChangeValueEventArgs.cs" />
     <Compile Include="Utils\GongFa.cs" />
     <Compile Include="Utils\GongFaAttribute.cs" />
     <Compile Include="Utils\GongFaManager.cs" />
