--- a/GongFaEditor/GongFaEditor.csproj
+++ b/GongFaEditor/GongFaEditor.csproj
@@ -8,10 +8,11 @@
     <OutputType>WinExe</OutputType>
     <RootNamespace>GongFaEditor</RootNamespace>
     <AssemblyName>GongFaEditor</AssemblyName>
-    <TargetFrameworkVersion>v4.6</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -61,9 +62,9 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utils\ChangeValueEventArgs.cs" />
-    <Compile Include="Utils\GongFa.cs" />
-    <Compile Include="Utils\GongFaAttribute.cs" />
-    <Compile Include="Utils\GongFaManager.cs" />
+    <Compile Include="Core\GongFa.cs" />
+    <Compile Include="Core\GongFaAttribute.cs" />
+    <Compile Include="Core\GongFaManager.cs" />
     <Compile Include="Utils\LogManager.cs" />
     <Compile Include="Utils\ObjectExtend.cs" />
     <EmbeddedResource Include="Component\GTextBox.resx">
@@ -80,6 +81,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -92,7 +94,9 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
+    <None Include="App.config">
+      <SubType>Designer</SubType>
+    </None>
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
